--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,23 @@
 # ===============================
 # = DATABASE CONNECTION
 # ===============================
-spring.datasource.url=jdbc:mysql://localhost:3306/library
-spring.datasource.username=root
-spring.datasource.password=Mysql@283
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# = H2 DATABASE (Use this for local testing without MySQL)
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
+
+# = MYSQL DATABASE (Commented out)
+# spring.datasource.url=jdbc:mysql://localhost:3306/library
+# spring.datasource.username=root
+# spring.datasource.password=Mysql@283
+# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
 
 # ===============================
-# = JPA / HIBERNATE
+# = SERVER CONFIGURATION
 # ===============================
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-
+server.port=8081
